<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Inicio" >

    <TextView
        android:id="@+id/inicio_seleccione_opcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:text="@string/inicio_seleccioneUnaOpcion" />

    <TextView
        android:id="@+id/inicio_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inicio_seleccione_opcion"
        android:layout_below="@+id/inicio_bienvenida"
        android:text="@string/inicioTitulo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/inicio_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inicio_titulo"
        android:layout_alignParentTop="true"
        android:text="@string/inicio_bienvenida" />

    <Button
        android:id="@+id/btAltaCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inicio_seleccione_opcion"
        android:layout_below="@+id/inicio_seleccione_opcion"
        android:layout_marginTop="15dp"
        android:text="@string/btAltaCuenta" />

    <Button
        android:id="@+id/btAccesoCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inicio_seleccione_opcion"
        android:layout_below="@+id/btAltaCuenta"
        android:text="@string/btAccesoCuenta" />

    <Button
        android:id="@+id/btVerCuentas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btAccesoCuenta"
        android:layout_below="@+id/btAccesoCuenta"
        android:layout_marginTop="98dp"
        android:text="@string/btVerCuentas" />

</RelativeLayout>