<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:parentActivityName=".OpcionesCuenta"
    tools:context=".IngresoEfectivo" >

    <TextView
        android:id="@+id/inicio_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/inicio_bienvenida" />

    <TextView
        android:id="@+id/ingresoEfectivoTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inicio_bienvenida"
        android:layout_below="@+id/inicio_bienvenida"
        android:text="@string/ingresoEfectivoTitulo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ingresoEfectivoTitulo"
        android:layout_below="@+id/ingresoEfectivoTitulo"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/digiteCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCantidad"
        android:layout_below="@+id/ingresoEfectivoTitulo"
        android:layout_marginTop="32dp"
        android:text="@string/digiteCantidad" />

    <Button
        android:id="@+id/btRealizarAccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCantidad"
        android:layout_below="@+id/txtCantidad"
        android:layout_marginTop="19dp"
        android:text="@string/realizarAccion" />

    <TextView
        android:id="@+id/montoDebeSerPositivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btRealizarAccion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/montoDebeSerPositivo" />

</RelativeLayout>