<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:parentActivityName=".OpcionesCuenta"
    tools:context=".OpCuentaTransferencia" >

    <TextView
        android:id="@+id/inicio_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/inicio_bienvenida" />

    <TextView
        android:id="@+id/transferenciaTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inicio_bienvenida"
        android:layout_below="@+id/inicio_bienvenida"
        android:text="@string/transferenciaTitulo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btRealizarAccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCantidad"
        android:layout_below="@+id/digiteCantidad"
        android:layout_marginTop="150dp"
        android:text="@string/realizarAccion" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/digiteCantidad"
        android:layout_below="@+id/digiteCantidad"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/digiteCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/transferenciaTitulo"
        android:layout_below="@+id/transferenciaTitulo"
        android:layout_marginTop="42dp"
        android:text="@string/digiteCantidad" />

    <TextView
        android:id="@+id/montoDebeSerPositivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btRealizarAccion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/montoDebeSerPositivo" />

    <TextView
        android:id="@+id/txtTransferenciaDigiteCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCantidad"
        android:layout_marginTop="16dp"
        android:text="@string/transferenciaCuentaDestino" />

    <EditText
        android:id="@+id/txtTransferenciaCuentaDestino"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTransferenciaDigiteCuenta"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1" />

</RelativeLayout>