<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccesoCuenta" >

    <TextView
        android:id="@+id/inicio_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/inicio_bienvenida" />

    <TextView
        android:id="@+id/accesoCuentaTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inicio_bienvenida"
        android:layout_below="@+id/inicio_bienvenida"
        android:text="@string/accesoCuentaTitulo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/accesoCuentaError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btAccesoCuentaEntrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/accesoCuentaError" />

    <EditText
        android:id="@+id/accesoCuentaNumCuenta"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accesoCuentaTxtNumCuenta"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1" 
        android:gravity="center" />

    <EditText
        android:id="@+id/accesoCuentaPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accesoCuentaNumCuenta"
        android:layout_alignRight="@+id/accesoCuentaNumCuenta"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:maxLines="1" 
        android:gravity="center"/>

    <TextView
        android:id="@+id/accesoCuentaTxtNumCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accesoCuentaTitulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/accesoCuentaTxtNumCuenta" />

    <TextView
        android:id="@+id/accesoCuentaTxtPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/accesoCuentaPin"
        android:layout_centerHorizontal="true"
        android:text="@string/accesoCuentaTxtPin" />

    <Button
        android:id="@+id/btAccesoCuentaEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accesoCuentaPin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/btAccesoCuentaEntrar" />

</RelativeLayout>