<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:parentActivityName=".OpcionesCuenta"
    tools:context=".OpCuentaRecargaTelefonica" >

    <TextView
        android:id="@+id/inicio_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/inicio_bienvenida" />

    <TextView
        android:id="@+id/recargaTelefonicaTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inicio_bienvenida"
        android:layout_below="@+id/inicio_bienvenida"
        android:text="@string/recargaTelefonicaTitulo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/digiteCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCantidad"
        android:layout_below="@+id/recargaTelefonicaTitulo"
        android:layout_marginTop="42dp"
        android:text="@string/digiteCantidad" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recargaTelefonicaTitulo"
        android:layout_below="@+id/digiteCantidad"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/montoDebeSerPositivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btRealizarAccion"
        android:layout_centerHorizontal="true"
        android:text="@string/montoDebeSerPositivo" />

    <Button
        android:id="@+id/btRealizarAccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCantidad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:text="@string/realizarAccion" />

    <EditText
        android:id="@+id/recargaTelefonicaTxtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btRealizarAccion"
        android:layout_below="@+id/txtCantidad"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:maxLength="9"
        android:maxLines="1"
        android:inputType="phone" />

    <TextView
        android:id="@+id/recargaTelefonicaDigiteTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recargaTelefonicaTxtTelefono"
        android:layout_below="@+id/txtCantidad"
        android:layout_marginTop="27dp"
        android:text="@string/recargaTelefonicaDigiteTelefono" />

</RelativeLayout>